--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -34,8 +34,9 @@ $footer-padding: 3rem 1.5rem 5.3rem;
 @import "./fonts";
 @import "./auth";
 @import "./footer";
-//@import "./contact";
-//@import "./about-project";
+@import "./header";
+@import "./contact";
+@import "./about-project";
 @import "./error";
 //@import "./responsive";
 
