--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -1,87 +1,82 @@
-.navbar-item {
-  img {
-    max-width: 54.98px;
-    max-height: 53.44px;
-  }
-}
-.is-navbar-end {
-  margin: 0;
-}
-.is-menu-center {
-  margin: auto;
-}
-/* .button {
-  border-color: transparent;
-  color: #f7cf43;
-  padding-bottom: 0px;
-  padding-top: 24px;
-} */
-.button.is-rounded {
-  height: 48px;
-  width: 48px;
-}
-.button:active,
-.button.is-active {
-  border-color: transparent;
-  color: #f7cf43;
-}
-.button:hover,
-.button.is-hovered {
-  border-color: transparent;
-  color: #f7cf43;
-}
-.button:focus,
-.button.is-focused {
-  border-color: transparent;
-  color: #f7cf43;
-}
-.button:focus:not(:active),
-.button.is-focused:not(:active) {
-  box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
-}
-.flaticon-user:before {
-  font-size: 28px;
-}
-.is-navbar_line.active:after {
-  position: absolute;
-  content: "";
-  height: 2px;
-  bottom: -8px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  width: 80%;
-  background: #f7cf43;
-}
-.is-navbar_line:after {
-  position: absolute;
-  content: "";
-  height: 2px;
-  bottom: -8px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  width: 0%;
-  background: #f7cf43;
-  transition: 0.5s;
-}
-.is-navbar_line.active {
-  color: #7fd1d8 !important;
-}
-.is-navbar_line:hover {
-  color: #7fd1d8 !important;
-  background-color: inherit !important;
-}
 
-.is-navbar_line:hover:after {
-  width: 80%;
-  background: #f7cf43;
-}
-.is-navbar_line {
-  font-size: 16px;
-  padding: 0;
-  margin: 0.5rem 1.5rem;
-}
+// .is-navbar-end {
+//   margin: 0;
+// }
+// .is-menu-center {
+//   margin: auto;
+// }
+// /* .button {
+//   border-color: transparent;
+//   color: #f7cf43;
+//   padding-bottom: 0px;
+//   padding-top: 24px;
+// } */
+// .button.is-rounded {
+//   height: 48px;
+//   width: 48px;
+// }
+// .button:active,
+// .button.is-active {
+//   border-color: transparent;
+//   color: #f7cf43;
+// }
+// .button:hover,
+// .button.is-hovered {
+//   border-color: transparent;
+//   color: #f7cf43;
+// }
+// .button:focus,
+// .button.is-focused {
+//   border-color: transparent;
+//   color: #f7cf43;
+// }
+// .button:focus:not(:active),
+// .button.is-focused:not(:active) {
+//   box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+// }
+// .flaticon-user:before {
+//   font-size: 28px;
+// }
+// .is-navbar_line.active:after {
+//   position: absolute;
+//   content: "";
+//   height: 2px;
+//   bottom: -8px;
+//   margin: 0 auto;
+//   left: 0;
+//   right: 0;
+//   width: 80%;
+//   background: #f7cf43;
+// }
+// .is-navbar_line:after {
+//   position: absolute;
+//   content: "";
+//   height: 2px;
+//   bottom: -8px;
+//   margin: 0 auto;
+//   left: 0;
+//   right: 0;
+//   width: 0%;
+//   background: #f7cf43;
+//   transition: 0.5s;
+// }
+// .is-navbar_line.active {
+//   color: #7fd1d8 !important;
+// }
+// .is-navbar_line:hover {
+//   color: #7fd1d8 !important;
+//   background-color: inherit !important;
+// }
+
+// .is-navbar_line:hover:after {
+//   width: 80%;
+//   background: #f7cf43;
+// }
+// .is-navbar_line {
+//   font-size: 16px;
+//   padding: 0;
+//   margin: 0.5rem 1.5rem;
+// }
 
 .card-content {
   padding: 1.2rem 0;
@@ -127,10 +122,7 @@
   width: 230px;
   height: 191px;
 }
-.footer {
-  background-color: transparent;
-  padding: 0;
-}
+
 .is-soc-item {
   display: flex;
   justify-content: space-around;
