main-page update

--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -123,20 +123,20 @@
   height: 191px;
 }
 
-.is-soc-item {
-  display: flex;
-  justify-content: space-around;
-  margin: 10px auto;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 6vh;
-}
+// .is-soc-item {
+//   display: flex;
+//   justify-content: space-around;
+//   margin: 10px auto;
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   bottom: 6vh;
+// }
 
-.is-soc-content {
-  margin: 0 7px;
-  i {
-    color: #7fd1d8;
-    font-size: 30px;
-  }
-}
+// .is-soc-content {
+//   margin: 0 7px;
+//   i {
+//     color: #7fd1d8;
+//     font-size: 30px;
+//   }
+// }
