--- a/Scss/_about-project.scss
+++ b/Scss/_about-project.scss
@@ -176,19 +176,19 @@
 }
 
 
-.is-soc-item {
-  display: flex;
-  justify-content: space-around;
-  margin: 10px auto;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 6vh;
-}
-.is-soc-content {
-  margin: 0 7px;
-  i {
-    color: #7fd1d8;
-    font-size: 30px;
-  }
-}
+// .is-soc-item {
+//   display: flex;
+//   justify-content: space-around;
+//   margin: 10px auto;
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   bottom: 6vh;
+// }
+// .is-soc-content {
+//   margin: 0 7px;
+//   i {
+//     color: #7fd1d8;
+//     font-size: 30px;
+//   }
+// }
