--- a/Scss/_footer.scss
+++ b/Scss/_footer.scss
@@ -2,8 +2,12 @@
   .button {
     padding: 9px;
     border: 2px solid #7fd1d8;
+    margin-left:5vh;
     i {
-      font-size: 18px;
+      font-size: 12px;
     }
   }
 }
+
+
+
