--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -26,6 +26,9 @@ $input-focus-box-shadow-color: #7fd1d866;
 $button-padding-horizontal: 3.5em;
 $button-focus-box-shadow-size: 0 0 0 0.25em;
 
+//font sizes 
+$is-size-7:0.875rem;
+
 //footer global variables
 $footer-background-color: #fff;
 $footer-padding: 3rem 1.5rem 5.3rem;
@@ -97,3 +100,4 @@ $footer-padding: 3rem 1.5rem 5.3rem;
     width: 256px;
   }
 }
+
