--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -35,7 +35,7 @@ $button-padding-horizontal: 3.5em;
 $button-focus-box-shadow-size: 0 0 0 0.25em;
 
 //font sizes
-$is-size-7: 0.875rem;
+$size-7: 0.875rem;
 
 //footer global variables
 $footer-background-color: #fff;
