--- a/Front-HTML/Scss/_main-page.scss
+++ b/Front-HTML/Scss/_main-page.scss
@@ -5,14 +5,24 @@
 
 .dropdown-button{
     background-color:white;
+    border: none;
     position: relative;
-    left:15vh;
-    top:8vh;
+    left: 8rem;
+    top: 4rem;
+}
+.dropdown-menu-content {
+    left: 2.7rem;
+    top: 7rem;
+    min-width: 6rem;
+}
+.dropdown-menu-content-item {
+    box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
+    border-radius: 8px;
 }
 .fly-1{
     position:fixed;
-    right:13vh;
-    top:25vh;
+    right: 5rem;
+    top: 14rem;
 }
 
 .fly-2{
@@ -22,26 +32,31 @@
 }
 
 .yellow-ladybird{
-   position:absolute;
-   left:30vh;
-   top:1vh;
+   position: absolute;
+   left: 16.5rem;
+   top: 1.5rem;
+   z-index: 30;
 }
-
+.search-input {
+    border: transparent;
+    background-color: transparent;
+}
 .blue-mark{
     position: absolute;
-    right:6vh;
-    top:1vh;
+    right: 3rem;
+    top: 0.4rem;
 }
 
 .search{
     position:absolute;
-    right:10vh;
-    top:1vh;
+    right: 5rem;
+    top: 0.4rem;
 }
+
 .plus{
     position:absolute;
-    right:1vh;
-    top:1vh;
+    right: 0.6rem;
+    top: 0.4rem;
 }
 
 .is-width{
@@ -70,7 +85,7 @@
     height:30px;
   }
 
-  .click-button{
+.click-button{
     width:90px;
     height:30px;
     box-shadow: 2px 2px 8px #7FD1D866;
@@ -89,9 +104,7 @@
     padding-right: 0;
     border-color: rgba(247, 207, 67, 1);
     box-shadow: 2px -1px 12px -4px rgba(247, 207, 67, 1);
-    .i{
-        font-size:14px;
-    }
+    font-size: 14px;
 
 }
   
